--- a/.gitignore
+++ b/.gitignore
@@ -51,7 +51,11 @@ rsconnect/
 # Data
 data/derived/~
 data/raw/~
-data/shapefiles/~
+data/shapefiles/*
 data/final/*.rds
+
+# Output
+output/*.html
+output/*.pdf
 
 
